--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,10 @@
 			<artifactId>druid</artifactId>
 			<version>1.2.4</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
 
 	</dependencies>
 
