--- a/pom.xml
+++ b/pom.xml
@@ -83,8 +83,15 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
+<!--		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>-->
 
-    </dependencies>
+
+
+	</dependencies>
 
 	<build>
 		<plugins>
