--- a/pom.xml
+++ b/pom.xml
@@ -89,7 +89,11 @@
 			<version>1.2</version>
 		</dependency>-->
 
-
+        <dependency>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
 
 	</dependencies>
 
